--- a/debian/control
+++ b/debian/control
@@ -9,15 +9,15 @@ Homepage: http://httpd.apache.org/mod_fcgid/
 Package: libapache2-mod-fcgid
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
-Description: an alternative module compat with mod_fastcgi
+Description: FastCGI interface module for Apache 2
  mod_fcgid is a high performance alternative to mod_cgi or mod_cgid,
  which starts a sufficient number instances of the CGI program to handle
  concurrent requests, and these programs remain running to handle further
  incoming requests. It is favored by the PHP developers, for example,
  as a preferred alternative to running mod_php in-process, delivering 
- very similar performance. 
+ very similar performance.
  .
- It is a binary compatibility alternative to Apache module mod_fastcgi.
+ It is a binary-compatible alternative to Apache module mod_fastcgi.
 
 Package: libapache2-mod-fcgid-dbg
 Architecture: any
@@ -30,8 +30,8 @@ Description: debugging symbols for mod_fcgid
  concurrent requests, and these programs remain running to handle further
  incoming requests. It is favored by the PHP developers, for example,
  as a preferred alternative to running mod_php in-process, delivering 
- very similar performance. 
+ very similar performance.
  .
- It is a binary compatibility alternative to Apache module mod_fastcgi.
+ It is a binary-compatible alternative to Apache module mod_fastcgi.
  .
  This package contains the debugging symbols for mod_fcgid.
