--- a/debian/fcgid.conf
+++ b/debian/fcgid.conf
@@ -1,4 +1,7 @@
 <IfModule mod_fcgid.c>
-  AddHandler	fcgid-script .fcgi
   FcgidConnectTimeout 20
+
+  <IfModule mod_mime.c>
+    AddHandler fcgid-script .fcgi
+  </IfModule>
 </IfModule>
