Add Vcs-* headers.

--- a/debian/control
+++ b/debian/control
@@ -5,6 +5,8 @@ Maintainer: Felix Geyer <fgeyer@debian.org>
 Build-Depends: debhelper (>= 9), apache2-dev (>= 2.4)
 Standards-Version: 3.9.4
 Homepage: http://httpd.apache.org/mod_fcgid/
+Vcs-Git: git://anonscm.debian.org/collab-maint/libapache2-mod-fcgid.git
+Vcs-Browser: http://anonscm.debian.org/gitweb/?p=collab-maint/libapache2-mod-fcgid.git
 
 Package: libapache2-mod-fcgid
 Architecture: any
